--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-loaders": "^3.0.1",
     "react-progressbar.js": "^0.2.0",
     "react-router-dom": "^6.3.0",
+    "react-router-loading": "^1.0.0",
     "react-scripts": "^5.0.1",
     "react-toastify": "^9.0.5",
     "sass": "^1.52.1",
