--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-router-dom": "^6.3.0",
     "react-router-loading": "^1.0.0",
     "react-scripts": "^5.0.1",
+    "react-scroll": "^1.8.7",
     "react-toastify": "^9.0.5",
     "sass": "^1.52.1",
     "semantic-ui-css": "^2.4.1",
