--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^2.1.3",
     "styled-components": "^5.3.5",
+    "sweet-scroll": "^4.0.0",
     "toastr": "^2.1.4",
     "web-vitals": "^2.1.4"
   },
